# SkillMint

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AI_INSTRUCTION_BUNDLE.md  AI_INSTRUCTION_BUNDLE_REVIEW.md  ARCHITECTURE.md  ROADMAP.md  TRUSTED_SKILLS.md
skillforge/: __init__.py  cli.py  detectors.py  generators.py  installer.py  models.py  registry.py  registry_extra.py  registry_extra_backend.py  ui.py
skillmint/: __init__.py  cli.py  detectors.py  generators.py  installer.py  instruction_bundle.py  models.py  registry.py  registry_extra.py  registry_extra_backend.py  registry_extra_web.py  ui.py
tests/: test_detection.py  test_detectors.py  test_generators.py  test_instruction_bundle.py  test_instruction_bundle_detection_review.py  test_instruction_bundle_manifest_consistency.py  test_instruction_bundle_review_policy.py  test_no_overwrite.py
