[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillmint"
version = "0.1.0"
description = "One command to make your codebase AI-agent ready."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Asim Awdah" }]
keywords = ["ai", "agents", "skills", "claude", "cursor", "copilot", "codex", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/asimawdah/SkillMint"
Repository = "https://github.com/asimawdah/SkillMint"
Issues = "https://github.com/asimawdah/SkillMint/issues"

[project.scripts]
skillmint = "skillmint.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skillmint*"]
